--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -14,10 +14,12 @@
   <!-- include source files here... -->
   <script src="src/Player.js"></script>
   <script src="src/Song.js"></script>
+  <script src="src/Mergesort.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script>
+  <script src="spec/Mergesort.spec.js"></script>
 
 </head>
 
